# dialise-digital-frontend

./: .gitignore  README.md  backend.Dockerfile  docker-compose.yml  frontend.Dockerfile  package-lock.json  package.json  pyproject.toml
backend/: db.py  main.py
backend/core/: database.py
backend/models/: alert_model.py  evolution_model.py  patient_model.py  user_model.py
backend/repositories/: evolution_repository.py
backend/routers/: evolution_router.py
backend/schemas/: evolution_schema.py
backend/services/: evolution_service.py
frontend/src/: App.tsx
frontend/src/store/: useCalendarioStore.ts  usePacientesStore.ts
src/: App.tsx  index.css
src/hooks/: useAutoVinculacaoMedico.ts
src/lib/: api.ts  busca.ts
src/pages/Calendario/: Calendario.css  Calendario.tsx  ListaAntibioticos.css  ListaAntibioticos.tsx  PainelEventosDia.css  PainelEventosDia.tsx
src/pages/Dashboard/: Dashboard.css  Dashboard.tsx
src/pages/Equipe/: Equipe.css  Equipe.tsx
src/pages/Evolucao/: Evolucao.tsx  FormEvolucao.css  FormEvolucao.tsx  PainelSelecao.css  PainelSelecao.tsx
src/pages/Exames/: Exames.css  Exames.tsx  ModalSolicitarExame.tsx  (+2 more)
src/store/: useAcessosStore.ts  useAuthStore.ts  useCalendarioStore.ts  useCopilotStore.ts  useDashboardStore.ts  useEvolucaoStore.ts  useExamesStore.ts  useHistoricoStore.ts  useLmeStore.ts  useMedicamentosStore.ts  useNavegacaoStore.ts  usePacientesStore.ts  usePasswordStore.ts  usePrescricoesStore.ts  useSolicitacoesExameStore.ts  useSolicitacoesExamesStore.ts  useToastStore.ts  useUsuariosStore.ts  useVacinasStore.ts
(+91 files in other folders)
