[project]
name = "ocean-hub-nefro-ai"
version = "0.1.0"
description = "MVP para o Centro de Diálise do Hospital Universitário de Brasília (HUB-UnB)"
authors = [
    { name = "Equipe de Desenvolvimento" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlmodel>=0.0.16",
    "psycopg2-binary>=2.9.9",
    "langchain>=0.1.13",
    "langchain-community>=0.0.29",
    "spacy>=3.7.4",
    "apscheduler>=3.10.4",
    "pydantic-settings>=2.2.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "frontend"]
